[package]
name = "media-tool-rs"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
tempfile = "3.9.0"
url = "2.5.0"
actix-web = { version = "4.4.1", default-features = false, features = ["macros", "compress-gzip", "compress-brotli"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "^1", features = ["full"] }
regex = "1.10.3"
openssl = { version = "0.10.64", features = ["vendored"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
file-hashing = "0.1.2"
md-5 = "0.10.6"
walkdir = "2.5.0"
blake2 = "0.10.6"
image = "0.25.2"
